--- a/021.html
+++ b/021.html
@@ -77,15 +77,15 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A3400002025041001562</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">安徽省，湖北省</div></li>
+				<div class="detail-value " id="passDists">安徽省，江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2025年04月11日16时06分至 2025年04月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">安徽省</span>:翔孚石化--G318--池州西收费站--G0321德上高速--G4212合安高速--G50沪渝高速--皖鄂界；<br><hr>
-<span id="pro">贵州省</span>:鄂皖界--G50沪渝高速--花桥收费站<br><hr></div></li>
+<span id="pro">安徽省</span>:翔孚石化--G318--池州西收费站--G0321德上高速--G50沪渝高速--S27安东高速--G35济广高速--S38东彭高速---皖赣界；<br><hr>
+<span id="pro">江西省</span>:赣皖界---S20彭湖高速--S22都九高速--G70福银高速--G6001南昌绕城高速--G60沪昆高速--G45大广高速--仙女湖收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -135,7 +135,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 安徽省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-湖北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+江西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
