--- a/006.html
+++ b/006.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002025032001598</div></li>
+                    <div class="detail-value " id="reqNo">A3500002025041401598</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，江西省</div></li>
+				<div class="detail-value " id="passDists">福建省,广东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年03月21日16时20分至 2025年03月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年04月15日16时20分至 2025年04月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>: 顺源达建材--S236--广太收费站--G1523甬菀高速--揭阳西立交--S17揭普惠高速--揭阳立交--G78汕昆高速--八斗立交--S19梅汕高速--石坝北立交--G25长深高速--热水立交--G4511龙河高速--粤赣界；<br><hr>
-<span id="pro">江西省</span>: 赣粤界--G4511龙河高速--定南收费站--G535--中国石化汶昌加油站<br><hr></div></li>
+<span id="pro">福建省</span>: 福建省龙帅工程机械租赁有限公司--G228--疏港大道辅路--古雷港收费站--G15沈海高速--闽粤界；<br><hr>
+<span id="pro">广东省</span>:粤闽界--G15沈海高速--饶平收费站--S222--嘉福木业有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">打桩机一台</div></li>
+                    <div class="detail-value " id="cargoInfo">挖掘机一台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.44吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -134,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-江西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+福建省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+广东省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
