--- a/006.html
+++ b/006.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">福建省</span>: 福建省龙帅工程机械租赁有限公司--G228--疏港大道辅路--古雷港收费站--G15沈海高速--闽粤界；<br><hr>
+<span id="pro">福建省</span>: 福建新顺兴装饰材料有限公司--G357--东山北收费站--S64东山支线--G15沈海高速--闽粤界；<br><hr>
 <span id="pro">广东省</span>:粤闽界--G15沈海高速--饶平收费站--S222--嘉福木业有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
