--- a/016.html
+++ b/016.html
@@ -106,7 +106,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EX5176</div></li>
+                    <div class="detail-value" id="vehicleNo">冀ET0452</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
                     <div class="detail-value" id="model">解放牌CA4250P66K24T1A1</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
