--- a/010.html
+++ b/010.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">安徽省</span>:贵池区牌楼镇五房--G236--G237--殷家汇收费站--G50沪渝高速--G0321德上高速--S12滁新高速--G35济广高速--皖豫界；<br><hr>
+<span id="pro">安徽省</span>:绿水青山农场--G318--池州西收费站--G0321德上高速--S12滁新高速--G35济广高速--皖豫界；<br><hr>
 <span id="pro">河南省</span>:豫皖界--G35济广高速---豫鲁界---豫鲁界---G0321德上高速--豫鲁界；<br><hr>
 <span id="pro">山东省</span>:鲁豫界--G35济广高速---G0321德上高速---鲁豫界---鲁豫界---G0321德上高速--G20青银高速（菏泽-聊城-德州）--鲁冀界；<br><hr>
 <span id="pro">河北省</span>:冀鲁界--G20青银高速--S78南绕城高速--S75阜赞高速---G5京昆高速--冀晋界；<br><hr>
