--- a/022.html
+++ b/022.html
@@ -88,7 +88,7 @@
 <span id="pro">陕西省</span>:陕蒙界--G65包茂高速-孟家湾收费站-孟家湾村<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
-                    <div class="detail-value " id="certName">邢台伟驰货物运输有限公司</div></li>
+                    <div class="detail-value " id="certName">付丞琦</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
                     <div class="detail-value " id="orgCertNo">130501302080</div></li>
                     
