--- a/001.html
+++ b/001.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002025063001562</div></li>
+                    <div class="detail-value " id="reqNo">A4400002025070301562</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年07月01日20时05分至 2025年07月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年07月04日18时05分至 2025年07月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:阳西博德精工建材有限公司--S282--新墟收费站--G15沈海高速--大昌口立交--G65包茂高速--粤桂界；<br><hr>
-<span id="pro">广西壮族自治区</span>:桂粤界--G65包茂高速--水汶收费站--G207--中东石化水汶加油站<br><hr></div></li>
+<span id="pro">广东省</span>:美加利水暖器材技术开发有限公司--G325--百合收费站--S26中阳高速--S5广台高速--G2518深岑高速--S14汕湛高速--G80广昆高速--粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界--G80广昆高速--G65包茂高速--梧州西收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">史雨奇</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,7 +98,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">破碎机一台</div></li>
+                    <div class="detail-value " id="cargoInfo">旋挖钻机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">42.69吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
