--- a/006.html
+++ b/006.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:广州泓泰新能源科技有限公司--G107--国泰收费站--S16广佛从高速--G0421许广高速--S1广连高速--粤桂界；<br><hr>
+<span id="pro">广东省</span>:广州泓泰新能源科技有限公司--G107--国泰收费站--G94珠三角环线高速--S16广佛从高速--G0421许广高速--S1广连高速--粤桂界；<br><hr>
 <span id="pro">广西壮族自治区</span>:桂粤界--S1广连高速--G0421许广高速--迎春收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
