--- a/006.html
+++ b/006.html
@@ -77,15 +77,15 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002025071101598</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省,广西壮族自治区</div></li>
+				<div class="detail-value " id="passDists">广东省,湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年07月14日18时10分至 2025年07月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年07月14日21时10分至 2025年07月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广东省</span>:广州泓泰新能源科技有限公司--G107--国泰收费站--G94珠三角环线高速--S16广佛从高速--G0421许广高速--S1广连高速--粤桂界；<br><hr>
-<span id="pro">广西壮族自治区</span>:桂粤界--S1广连高速--G0421许广高速--迎春收费站<br><hr></div></li>
+<span id="pro">广东省</span>:广州泓泰新能源科技有限公司--G107--国泰收费站--G94珠三角环线高速--S16广佛从高速--G0421许广高速--S1广连高速--粤湘界；<br><hr>
+<span id="pro">湖南省</span>:湘粤界--S1广连高速--G0421许广高速--迎春收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -135,7 +135,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+湖南省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
