--- a/004.html
+++ b/004.html
@@ -77,7 +77,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A3200002025091703512</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">江苏省，上海市，浙江省，福建省，广东省</div></li>
+				<div class="detail-value " id="passDists">江苏省，上海市，浙江省，江西省，广东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2025年09月19日16时02分至 2025年09月30日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
@@ -86,9 +86,9 @@
 				<div class="detail-value " id="roads"><br>
 <span id="pro">江苏省</span>:秦潭港--石堤大道--S255通海大道--王海公路--S433吕北线--吕四港收费站--S28启扬高速--G40沪陕高速--苏沪界；<br><hr>
 <span id="pro">上海市</span>:沪苏界--G40沪陕高速--G1503上海绕城高速--S20外环高速--G60沪昆高速--沪浙界；<br><hr>
-<span id="pro">浙江省</span>:浙沪界--G60沪昆高速--G25长深高速--浙闽界；<br><hr>
-<span id="pro">福建省</span>:闽浙界--G25长深高速--闽粤界；<br><hr>
-<span id="pro">广东省</span>:粤闽界--G25长深高速--程江枢纽--S19梅汕高速--畲江立交--G78汕昆高速--揭阳立交--S17揭普惠高速--葵潭收费站--G324--明发汽修厂<br><hr></div></li>
+<span id="pro">浙江省</span>:浙沪界--G60沪昆高速--浙赣界；<br><hr>
+<span id="pro">江西省</span>:赣浙界--G60沪昆高速--G35济广高速--赣粤界；<br><hr>
+<span id="pro">广东省</span>:粤赣界--G35济广高速--田兴立交--S66梅平高速--上村立交--G25长深高速--程江枢纽--S19梅汕高速--畲江立交--G78汕昆高速--揭阳立交--S17揭普惠高速--葵潭收费站--G324--明发汽修厂<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范哲宇</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -140,7 +140,7 @@
 江苏省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
 上海市：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
 浙江省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
-福建省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
+江西省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
 广东省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
