--- a/014.html
+++ b/014.html
@@ -137,7 +137,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-重庆市：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>、
+重庆市：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 贵州省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 湖南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
