--- a/015.html
+++ b/015.html
@@ -77,15 +77,16 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A1500002025121802317</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">内蒙古自治区，陕西省</div></li>
+				<div class="detail-value " id="passDists">内蒙古自治区，山西省，河北省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年12月19日11时37分至 2025年12月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年12月19日16时17分至 2025年12月31日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">内蒙古自治区</span>:包头聚兴阳光汽贸--G210--九原收费站--G6京藏高速--G65包茂高速--蒙陕界；<br><hr>
-<span id="pro">陕西省</span>:陕蒙界--G65包茂高速--孟家湾收费站--G210--供销石油加油站<br><hr>
+<span id="pro">内蒙古自治区</span>:包头聚兴阳光汽贸--G210--九原收费站--G6京藏高速--德敖线--S24兴巴高速--S31呼准高速--蒙晋界；<br><hr>
+<span id="pro">山西省</span>:晋蒙界--S31呼准高速--S40灵河高速--G55二广高速--G2003太原绕城高速--G5京昆高速--晋冀界；<br><hr>
+<span id="pro">河北省</span>:冀晋界--G5京昆高速--S75阜林高速--S78南绕城高速--G20青银高速--G4京港澳高速--S04邯郸绕城高速--户村收费站--邯武快速路--复兴圣龙装备科技产业园<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -136,7 +137,8 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
 内蒙古自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-陕西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr>
+山西省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+河北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr>
 </div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
