--- a/012.html
+++ b/012.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">内蒙古自治区</span>:满洲里进口资源加工园区--G301--满洲里收费站--G10绥满高速--蒙黑界；<br><hr>
+<span id="pro">内蒙古自治区</span>:扎赉诺尔区--G301--二卡收费站--G10绥满高速--蒙黑界；<br><hr>
 <span id="pro">黑龙江省</span>:黑蒙界--G10绥满高速--齐齐哈尔西收费站--齐查公路--S217--中国石油奈门沁加油站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
