--- a/004.html
+++ b/004.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">安徽省</span>:安徽雷炎电子科技有限公司--石楠路--明珠大道--集贤路辅路--集贤路收费站--G4001合肥绕城高速--G40沪陕高速--G42沪蓉高速--皖鄂界；<br><hr>
+<span id="pro">安徽省</span>:中国石化严店加油站--合铜公路辅路--严店收费站--G3京台高速--G4001合肥绕城高速--G40沪陕高速--G42沪蓉高速--皖鄂界；<br><hr>
 <span id="pro">湖北省</span>:鄂皖界--G42沪蓉高速--木子店收费站--G346--湖北泰鼎建筑劳务有限公司<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范哲宇</div></li>
