--- a/014.html
+++ b/014.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>: 中国石油富川富饶加油站--G538--西环路--富阳收费站--S13富钟高速--桂湘界；<br><hr>
+<span id="pro">广西壮族自治区</span>: 广西辉润水泥制品厂--G323--钟山东收费站--S1301贺西高速--S13富钟高速--桂湘界；<br><hr>
 <span id="pro">湖南省</span>: 湘桂界--S81道贺高速--G76厦蓉高速--宁远南收费站--九疑大道--永州宁远勇胜加油站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
