--- a/a001.html
+++ b/a001.html
@@ -53,24 +53,25 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002025021300069</div>
+                    <div class="detail-value " id="reqNo">B4200002026012300055</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
-                    <div class="detail-value " id="passDists">湖北省</div>
+                    <div class="detail-value " id="passDists">湖北省内</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2025-02-14至2025-02-20</div>
+                    <div class="detail-value " id="passDate">2026-01-23至2026-01-31</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
-                    <div class="detail-value " id="passCount">单次</div>
+                    <div class="detail-value " id="passCount">1</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>荆州市江陵申达电气有限公司-荆监一级公路-楚江大道-G351-普济收费站-S53枣石高速-旧口收费站-G234-中国京油加油站。(审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>武汉帝光电子有限公司--东风大道--沌口收费站--S40四环线--G0422武深高速
+--潘家湾收费站--G351--武汉通威技术服务中心。(审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,21 +86,21 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">变压器</div>
+                    <div class="detail-value " id="cargoInfo">注塑机</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">43.00吨</div>
+                    <div class="detail-value " id="cargoWeight">58.1吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">12.00 × 3.75 × 3.60</div>
+                    <div class="detail-value " id="cargoOutline">26.00 × 3.70× 3.60</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EQ7989</div>
+                    <div class="detail-value" id="vehicleNo">冀E3485W</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
@@ -111,29 +112,29 @@
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀ERE85挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀E406T挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
-                    <div class="detail-value" id="hanmodel">鲁俊达牌</div>
+                    <div class="detail-value" id="hanmodel">中航鸿盛牌</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车整备质量：</div>
-                    <div class="detail-value " id="hanvehWeight">8.20吨</div>
+                    <div class="detail-value " id="hanvehWeight">8.10吨</div>
                 </li>
 
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">60.00吨</div>
+                    <div class="detail-value " id="totalWeight">75.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">24.00 × 3.75 × 4.50</div>
+                    <div class="detail-value " id="totalOutline">26.00 × 3.70 × 4.50</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+30</div>
+                    <div class="detail-value " id="axlesLoad">10+20+3*18</div>
                 </li>
             </ul>
         </div>
